# bibbi-autoriteter

./: .editorconfig  .env.dist  .gitattributes  .gitignore  Pipfile  README.md  generate_ex3.py  logging.yml  process.py  process2.py  pyproject.toml  setup.cfg  setup.py
bat/: export_bibbi_autoriteter.bat
bibbi/: alchemy_test.py  components.py  constants.py  datatable.py  db.py  entities.py  entity_service.py  graph.py  label.py  logging.py  lookup.py  promus_cache.py  promus_service.py  references.py  repository.py  util.py  wikidata_service.py
bibbi/console/: __init__.py  config.py  extract_authorities.py  extract_catalog.py  extract_catalogue.py  process.py  update_webdewey.py  upload.py
bibbi/serializers/: rdf.py
cache/: corporation.feather  corporation_itemcounts.feather  genre.feather  geographic.feather  geographic_itemcounts.feather  nation.feather  person.feather  topic.feather  topic_itemcounts.feather  topical.feather
src/: bibbi-emner.ttl  bibbi-groups.ttl  bibbi-sjanger-form.ttl  bibbi.scheme.ttl  bs.ttl  ex3-topconcepts.nt
src/vocabularies/: iso-thes.ttl  nkos.ttl
test/: test-minimal.py  test_components.py  test_datarow.py  test_entities.py  test_label.py  util.py
tests/: minimal-complex.ttl  test_components.py  test_entities.py  test_label.py  util.py
