[tool.poetry]
name = "bibbi-aut"
version = "0.1.0"
description = "Conversion scripts for Biblioteksentralen's authority records"
authors = ["Dan Michael O. Heggø <Dan.Michael.Heggo@bibsent.no>"]
license = "MIT"
packages = [
    { include = "bibbi" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
openpyxl = "^3.0.3"
rdflib = "^5.0.0"
psutil = "^5.7.0"
otsrdflib = "^0.5.0"
pyodbc = "^4.0.30"
pydash = "^4.7.6"
feather-format = "^0.4.1"
skosify = {git = "https://github.com/NatLibFi/Skosify.git", rev = "master"}
python-dotenv = "^0.13.0"
colorama = "^0.4.3"
sparqlwrapper = "^1.8.5"
humanize = "^2.5.0"
orjson = "^3.3.0"
elasticsearch = "^7.8.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-testdox = "^1.2.1"
ipykernel = "^5.3.0"
mypy = "^0.782"

[tool.poetry.scripts]
process = "bibbi.console.process:main"
extract_catalogue = "bibbi.console.extract_catalogue:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "--verbose tests"

